--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+
+
         <nav>
-            <ul>
-                <li><a href="">Home</a></li>
+            <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
             </ul>
@@ -35,7 +39,19 @@
     <!--Main Content-->
     <main> Main Content</main>
     <!--Footer-->
-    <Footer>Footer</Footer>
+    <Footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+
+    </Footer>
+    <!-- Font Awesome kit-->
+    <script src="https://kit.fontawesome.com/70d9507ffc.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
