--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for search engines-->
     <meta name="description"
-        content="Love Running. CLub for runers in Dublin, Ireland. Urban running, trail running. Dublin docklands, Phoenix Park">
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands, Phoenix Park">
     <meta name="" keywords" content="" love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love Running</title>
     <!--Favicon-->
