--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta tags for search engines-->
+    <!-- Meta tags for search engines -->
     <meta name="description"
-        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands, Phoenix Park">
-    <meta name="" keywords" content="" love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
@@ -37,7 +37,7 @@
             </ul>
         </nav>
     </header>
-    <!--Main Content-->
+    <!-- Main Content -->
     <main>
         <section id="hero">
             <div id="cover-text">
@@ -46,49 +46,41 @@
         </section>
         <!--REasons section-->
         <section id="reasons">
-            <h2> Why Love Running With Us?</h2>
+            <h2>Why love running with us?</h2>
             <div id="benefits">
-                <div class="benefits-physical">
+                <div id="benefits-physical">
                     <div>
-                        <h3>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+                        <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
                         <hr>
-                        <p>
-                            Since it improves aerobic fitness, running is a great way to improve your cardiovascular
-                            health. Plus, it burns calories and can build strength.
-                        </p>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
+                            health. Plus, it burns calories and can build strength.</p>
                     </div>
                     <div>
-                        <h3>Feel Strong <i class="fa-solid fa-dumbbell"></i></h3>
+                        <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
                         <hr>
-                        <p>
-                            Running strengthens your heart by pumping blood more effectively through your body.
-                        </p>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
                     </div>
                 </div>
-                <div class="benefits-mental">
+                <div id="benefits-mental">
                     <div>
-                        <h3>Feel Free <i class="fa-brands fa-fly"></i></h3>
+                        <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
                         <hr>
-                        <p>
-                            Physical exercise, running included, is known to release endorphins in the brain. Endorphins
-                            make you more energetic, more awake and, yes, happier.
-                        </p>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins
+                            make you more energetic, more awake and, yes, happier.</p>
                     </div>
                     <div>
-                        <h3>Get Social <i class="fa-solid fa-globe"></i></h3>
+                        <h3>Get social <i class="fa-solid fa-globe"></i></h3>
                         <hr>
-                        <p>
-                            When we run with others, we can run farther and faster more easily. Social running can pull
-                            you out of a running funk or low mood, and inspire you to try new events.
-                        </p>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull
+                            you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
-                <div id=#benefits-image>
+                <div id="benefits-image">
                     <div id="circle-cover-bg"></div>
                 </div>
             </div>
         </section>
-        <!-- Meetup times section-->
+        <!-- Meetup Times section-->
         <section id="meetups">
             <h2>Meet-up Times</h2>
             <div id="times">
@@ -111,53 +103,56 @@
                     <p>Friday</p>
                     <p>5K</p>
                     <p>The Marker Hotel</p>
-                    <p>11:30</p>
-                    <div>
-                        <h3>Trail <i class="fa-solid fa-tree"></i></h3>
-                        <p>Saturday</p>
-                        <p>10K</p>
-                        <p>The Phoenix Park</p>
-                        <p>09:30</p>
-                    </div>
-                    <div>
-                        <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
-                        <p>Sunday</p>
-                        <p>0K</p>
-                        <p>The Marker Hotel</p>
-                        <p>11:30</p>
-                    </div>
-
+                    <p>18:30</p>
                 </div>
+
+                <div>
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10K</p>
+                    <p>The Phoenix Park</p>
+                    <p>09:30</p>
+                </div>
+                <div>
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Sunday</p>
+                    <p>0K</p>
+                    <p>The Marker Hotel</p>
+                    <p>11:30</p>
+                </div>
+
+            </div>
             </div>
         </section>
     </main>
+
     <!--Footer-->
-    <Footer>
+    <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="blank" rel="noopener"
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="blank" rel="noopener"
+                <a href="https://twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
                     <i class="fa-brands fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="blank" rel="noopener"
+                <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
                     <i class="fa-brands fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="blank" rel="noopener"
+                <a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
 
-    </Footer>
-    <!-- Font Awesome kit-->
+    </footer>
+    <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/70d9507ffc.js" crossorigin="anonymous"></script>
 </body>
 
