--- a/gallery.html
+++ b/gallery.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta tags for search engines-->
+    <!-- Meta tags for search engines -->
     <meta name="description"
-        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands, Phoenix Park">
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="" keywords" content="" love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
@@ -37,9 +37,27 @@
             </ul>
         </nav>
     </header>
-    <!--Main Content-->
-    <main> Main Content</main>
-    <!--Footer-->
+    <!-- Main Content -->
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets\images\athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+
+        </section>
+
+    </main>
+    <!-- Footer -->
     <Footer>
         <ul id="social-networks">
             <li>
