--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter"></i></a>
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
