--- a/signup.html
+++ b/signup.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Meta tags for search engines-->
+    <!-- Meta tags for search engines -->
     <meta name="description"
-        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands, Phoenix Park">
-    <meta name="" keywords" content="" love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title-->
     <title>Love Running</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -19,7 +20,7 @@
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
@@ -32,40 +33,72 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html" class="active">Sign Up</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
-    <!--Main Content-->
-    <main> Main Content</main>
-    <!--Footer-->
-    <Footer>
+    <!-- Main content -->
+    <main>
+
+        <section id="signup">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heart-pulse"></i> Let's get you signed up!</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" name="first_name" id="first-name" class="text-input" required>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" name="last_name" id="last-name" class="text-input" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Run!</button>
+            </form>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="blank" rel="noopener"
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="blank" rel="noopener"
+                <a href="https://twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter"></i></a>
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="blank" rel="noopener"
+                <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="blank" rel="noopener"
+                <a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
 
-    </Footer>
-    <!-- Font Awesome kit-->
+    </footer>
+
+    <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/70d9507ffc.js" crossorigin="anonymous"></script>
 </body>
 
