--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,8 @@
     <!-- Meta tags for search engines -->
     <meta name="description"
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="" keywords" content="" love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title-->
     <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -37,11 +38,12 @@
             </ul>
         </nav>
     </header>
-    <!-- Main Content -->
+    <!-- Main content -->
     <main>
         <section id="gallery">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
-                <img src="assets\images\athletes.webp" alt="Two athletes running together">
+                <img src="assets/images/athletes.webp" alt="Two athletes running together">
                 <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
                 <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
                 <img src="assets/images/man.webp" alt="Man at charity paint running festival">
@@ -58,32 +60,33 @@
 
     </main>
     <!-- Footer -->
-    <Footer>
+    <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="blank" rel="noopener"
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="blank" rel="noopener"
+                <a href="https://twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter"></i></a>
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="blank" rel="noopener"
+                <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube"></i></a>
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="blank" rel="noopener"
+                <a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
 
-    </Footer>
-    <!-- Font Awesome kit-->
+    </footer>
+
+    <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/70d9507ffc.js" crossorigin="anonymous"></script>
 </body>
 
