--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer>`
         <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
